Gave contentbox more width to fix scrollbars overlapping with columns

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -193,6 +193,7 @@ body {
     font-family: 'Nunito', sans-serif;
 }
 .contentbox {
+	width: 105%;
     padding: 20px;
 }
 .contentbox:hover {
